--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>喵喵喵?</title>
-  </head>
+    <title>kamino</title>
+    <meta name="keywords" content="kamino imea aikamino isdut">
+    <meta name="description" content="在下kamino,有何贵干?">
   <body>
     <noscript>
       <strong>We're sorry but router doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
